# gso2

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac  doxygen.mk.am  doxygen.mk.in
doc/: design.tex  doxygen-config.in  uops.tex
include/: AAP.h  InstrContext.h  InstrSequence.h  Instruction.h  MachineState.h  Operand.h  OperandClass.h  Register.h  TargetInfo.h  Type.h
libraries/cppinput/: cppinput.hpp
libraries/iof/: cerrf.hpp  chg_all_uns_to_else.txt  cinf.hpp  coutf.hpp  except.hpp  fmt_guard.hpp  fmt_processing_utils.hpp  fmt_spec.hpp  fmtr.hpp  fmtr_in.hpp  fmtr_out.hpp  form_feed.hpp  input.hpp  io.hpp  omanips.hpp  output.hpp  prints.hpp  process_fmt_in.hpp  process_fmt_out.hpp  scans.hpp  skip_past.hpp  stream_fmt.hpp  stringizer.hpp  tostr.hpp  validity.hpp
m4/: ax_mpi.m4
src/: Driver.cpp  GenericTargetMachine.hpp  InstrContext.cpp  InstrSequence.cpp  Instruction.cpp  Instruction.hpp  TargetMachine.hpp  TargetMachineWithFlags.hpp  backend.hpp  frontend.hpp  generate.py  main.cpp  main_parallel.cpp  slots.hpp  utility.cpp  utility.hpp
src/algorithms/: bruteforce.hpp  bruteforceByCost.hpp  canonical.cpp  canonical.hpp  canonicalIterator.hpp  canonicalIteratorBasic.cpp  canonicalIteratorBasic.hpp  canonicalIteratorGeneric.cpp  canonicalIteratorGeneric.hpp  canonicalIteratorLiveness.cpp  canonicalIteratorLiveness.hpp  constantIterator.cpp  constantIterator.hpp  test.hpp
src/backends/: generic.cpp  generic.hpp
src/frontends/: avr.hpp  avr.yml
src/parallel/: mpi.hpp
tests/: avr_instruction.cpp  bruteforce.cpp  bruteforceByCost.cpp  canonical_slots.cpp  canonical_speed.cpp  canonical_speed_full.cpp  frontend.cpp  slots.cpp  test.cpp  utility.cpp
tests/data/: sparse_4.csv  sparse_5.csv  standard_1.csv  standard_2.csv
